<resources>
    <!-- Global -->
    <string name="app_name">Pays-Ville</string>
    <string name="app_logo">Logo</string>
    <string name="app_version_title">Version</string>
    <string name="next">Suivant</string>
    <string name="cancel">Annuler</string>
    <string name="leave">Quitter</string>
    <string name="ok">OK</string>
    <string name="modify">Modifier</string>
    <string name="not_yet_available">Pas encore disponible</string>
    <string name="help">Aide</string>
    <string name="theme">Thème</string>
    <string name="dark_theme">Thème sombre</string>
    <string name="light_theme">Thème clair</string>
    <string name="default_theme">Économiseur de batterie</string>
    <string name="email_adress" translatable="false">maxvanliefde@protonmail.com</string>
    <string name="github_url" translatable="false">https://github.com/maxvanliefde/paysville-android</string>
    <string name="developer" translatable="false">Max Vanliefde</string>

    <!-- Main Activity -->
    <string name="title_home_bottom">Jouer</string>
    <string name="title_home">Jouer au Pays-Ville</string>
    <string name="title_settings_bottom">Paramètres</string>
    <string name="title_settings">Paramètres du jeu</string>
    <string name="title_about_bottom">À propos</string>
    <string name="title_about" translatable="false">À propos de cette application</string>
    <string name="launch_game_text">Lancer le jeu</string>
    
    <string name="text_home_fragment">Que diriez-vous d\'une petite partie ?</string>
    <string name="verify_game_parameters">"Vérifiez les paramètres de jeu"</string>
    <string name="return_when_ready">"Retournez sur l'onglet Jouer dès que vous aurez choisi vos paramètres"</string>

    <string name="before_start">Avant de démarrer…</string>
    <string name="launch_game_text_ok">OK, lancer le jeu</string>
    <string name="modify_settings">Modifier les paramètres</string>

    <!-- Players Choice Activity -->
    <string name="players_choice_activity_title">Sélection des joueurs</string>
    <string name="text_players_number">Combien de joueurs êtes-vous ?</string>
    <string name="text_players_names">Bienvenue à vous %1$d ! \nComment vous appelez-vous ?</string>
    <string name="text_players_done">C\'est bien noté,\n %1$s !\nOn va pouvoir commencer à jouer !</string>

    <!-- Game Activity -->
    <string name="round">Manche</string>
    <string name="text_round_number">#%1$d</string>
    <string name="text_round_ready">Tout le monde est prêt ?</string>
    <string name="play_round">Jouer</string>
    <string name="text_round_letter_is">La lettre de la manche est</string>
    <string name="text_round_times_up">Le compte à rebours est terminé !</string>
    <string name="encode_points">Encoder les points</string>
    <string name="text_game_points">Encodez les points de cette manche.</string>
    <string name="save">Enregistrer</string>
    <string name="continue_to">Continuer</string>

    <string name="verify_points_title">"Un petit point sur les scores !"</string>
    <string name="plot_twist_double_points">Plot twist ! Cette manche a compté double pour chaque joueur !</string>

    <string name="game_finished">La partie est terminée !</string>
    <string name="winners">Gagnant.e.s</string>
    <string name="winners_are">La partie a été remportée ex-aequo par</string>
    <string name="winner_is">La partie a été remportée par</string>
    <string name="congratulations">Bravo à tout le monde !</string>
    <string name="finish">Terminer</string>

    <string name="leave_game_title">Vous vous apprêtez à quitter la partie !</string>
    <string name="leave_game_msg">Souhaitez-vous continuer ? Vous perdrez la partie en cours.</string>
    
    <!-- About page -->
    <string name="rate">Noter l\'application</string>
    <string name="contact">Contacter</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="source_code">Code source de l\'application</string>
    <string name="thanks">Remerciements</string>
    <string name="open_source_libraires">Librairies open source</string>
    <string name="open_source_libraires_summary">Utilisées pour créer l\'application</string>
</resources>