<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_perm_device_information_24"
        android:key="app_version"
        android:title="@string/app_version_title"
        app:selectable="true" />

    <Preference
        android:icon="@drawable/ic_help_outline_24"
        android:summary="@string/not_yet_available"
        android:title="@string/help"
        app:enabled="false"
        app:key="help" />

    <Preference
        android:enabled="false"
        android:icon="@drawable/ic_star_outline_24"
        android:summary="@string/not_yet_available"
        android:title="@string/rate"
        app:key="rate" />

    <Preference
        android:icon="@drawable/ic_mail_outline_24"
        android:key="contact"
        android:summary="@string/email_adress"
        android:title="@string/contact" />

    <Preference
        android:icon="@drawable/ic_code_24"
        android:key="github"
        android:summary="@string/source_code"
        android:title="@string/github" />

    <Preference
        android:icon="@drawable/ic_source_24"
        android:key="libraries"
        android:summary="@string/open_source_libraires_summary"
        android:title="@string/open_source_libraires" />

</PreferenceScreen>