<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.game_launch_round.LaunchRoundFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/play_round_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_round_number"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_round_ready"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>