<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="be.thefluffypangolin.paysville.ui.main_home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main_home" >
        <action
            android:id="@+id/action_home_to_launchDialog"
            app:destination="@id/launchGameDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="be.thefluffypangolin.paysville.ui.main_settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_main_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="be.thefluffypangolin.paysville.ui.main_about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_main_about" />

    <dialog
        android:id="@+id/launchGameDialogFragment"
        android:name="be.thefluffypangolin.paysville.ui.main_home.LaunchGameDialogFragment"
        android:label="LaunchGameDialogFragment" />
</navigation>